fix: user profile button alignment

--- a/packages/xm_dkfz_net_site/Resources/Private/Scss/components/userprofile.scss
+++ b/packages/xm_dkfz_net_site/Resources/Private/Scss/components/userprofile.scss
@@ -66,6 +66,10 @@ div.userprofile {
         .image {
             grid-row: 1 / 4;
         }
+
+        .button {
+            align-self: flex-end;
+        }
     }
 
 
